[feat] added store & import vuetify

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,5 @@
 @import "base/general";
 @import "components/font-icon";
 @import "components/select";
+@import "components/layout";
+@import "pages/page-error";
